--- a/src/layouts/auth.style.scss
+++ b/src/layouts/auth.style.scss
@@ -49,7 +49,7 @@
 
     .card-box {
       @apply rounded-[16px];
-      @apply p-10;
+      @apply p-[50px];
 
       box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.07);
 
